Add the application plugin to package as executable